--- a/plan_your_trip.html
+++ b/plan_your_trip.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <ul>
-                        <a href="Main.html" class="navi">About Taniti</a>
+                        <a href="index.html" class="navi">About Taniti</a>
                         <a href="things_to_do.html" class="navi">Things to Do</a>
                         <a href="places_to_stay.html" class="navi">Places to Stay</a>
                         <a href="eat_drink.html" class="navi">Eat & Drink</a>
