--- a/things_to_do.html
+++ b/things_to_do.html
@@ -14,7 +14,7 @@
             <a href="index.html" class="logo">Taniti Island</a>
             <nav>
                 <ul>
-                    <a href="Main.html" class="navi">About Taniti</a>
+                    <a href="index.html" class="navi">About Taniti</a>
                     <a href="things_to_do.html" class="navi">Things to Do</a>
                     <a href="places_to_stay.html" class="navi">Places to Stay</a>
                     <a href="eat_drink.html" class="navi">Eat & Drink</a>
