--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
         <div class="container">
             <a href="index.html" class="logo">Taniti Island</a>
             <nav>
-                <ul>
-                    <a href="index.html" class="navi">About Taniti</a>
-                    <a href="things_to_do.html" class="navi">Things to Do</a>
-                    <a href="places_to_stay.html" class="navi">Places to Stay</a>
-                    <a href="eat_drink.html" class="navi">Eat & Drink</a>
-                    <a href="plan_your_trip.html" class="navi">Plan Your Trip</a>
-                    <a href="contact_us.html" class="navi">Contact Us</a>
-
-                </ul>
+                <a href="index.html" class="navi">About Taniti</a>
+                <a href="things_to_do.html" class="navi">Things to Do</a>
+                <a href="places_to_stay.html" class="navi">Places to Stay</a>
+                <a href="eat_drink.html" class="navi">Eat & Drink</a>
+                <a href="plan_your_trip.html" class="navi">Plan Your Trip</a>
+                <a href="contact_us.html" class="navi">Contact Us</a>
             </nav>
             <div class="search-bar">
                 <input type="text" placeholder="Search Taniti Island">
@@ -65,6 +62,11 @@
                 time exploring the island and relaxing on the beach."</p>
             <p>"We had an unforgettable experience in Taniti. The locals were friendly, the food was delicious, and the
                 island is truly breathtaking."</p>
+            <p>"The crystal-clear waters and vibrant coral reefs were a dream come true for snorkeling enthusiasts. We
+                saw an incredible variety of fish and marine life. This was definitely a highlight of our trip!"</p>
+            <p>"Taniti Island offered something for everyone in our family. The kids loved the water activities, while
+                we adults enjoyed exploring the historical sites and cultural experiences. We all had a wonderful time
+                and will cherish these memories forever."</p>
         </div>
     </section>
 
@@ -87,4 +89,14 @@
             <p>&copy; 2024 Taniti Island. All Rights Reserved.</p>
             <nav>
                 <ul>
-                    <li><a href="#">Privacy
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </footer>
+</body>
+
+</html>
