--- a/eat_drink.html
+++ b/eat_drink.html
@@ -66,25 +66,46 @@
             </article>
         </div>
     </section>
-
-    <section class="call-to-action">
-        <h2>Unwind and Savor the Flavors of Taniti Island</h2>
-        <p>Discover a world of culinary delights and vibrant nightlife options waiting for you on Taniti Island.</p>
-        <a href="#" class="button">Explore Restaurants & Bars</a>
-        <a href="#" class="button">Browse Accommodations</a>
-    </section>
-
     <section class="testimonials">
         <h2>What People Are Saying</h2>
         <div class="carousel">
-            <p>"The food on Taniti Island was incredible! We enjoyed fresh seafood dishes, delicious cocktails, and
-                authentic local cuisine. There's something for everyone's taste buds."</p>
-            <p>"We loved trying all the different flavors at the local markets. The atmosphere was lively, and the food
-                was
-                so fresh and flavorful. We also had some amazing meals at the fine dining restaurants."</p>
+            <p>"Taniti Island is a paradise! The scenery was stunning, and the activities were amazing. We had the best
+                time exploring the island and relaxing on the beach."</p>
+            <p>"We had an unforgettable experience in Taniti. The locals were friendly, the food was delicious, and the
+                island is truly breathtaking."</p>
+            <p>"The crystal-clear waters and vibrant coral reefs were a dream come true for snorkeling enthusiasts. We
+                saw an incredible variety of fish and marine life. This was definitely a highlight of our trip!"</p>
+            <p>"Taniti Island offered something for everyone in our family. The kids loved the water activities, while
+                we adults enjoyed exploring the historical sites and cultural experiences. We all had a wonderful time
+                and will cherish these memories forever."</p>
         </div>
     </section>
 
+    <section class="cta">
+        <a href="#" class="button">Explore Things to Do</a>
+        <a href="#" class="button">Browse Accommodations</a>
+    </section>
+
     <section class="social-proof">
-        <img src="resources/restaurant-award-3456789_640.webp" alt="Restaurant Award Logo">
-        <p>Awarded "
+        <img src="resources/laurel-wreath-2604071_640.webp" alt="Travel Award Logo">
+        <p>Featured in "Travel Times Today"</p>
+        <ul class="social-media">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Taniti Island. All Rights Reserved.</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </footer>
+</body>
