--- a/plan_your_trip.html
+++ b/plan_your_trip.html
@@ -72,20 +72,43 @@
     <section class="testimonials">
         <h2>What People Are Saying</h2>
         <div class="carousel">
-            <p>"Planning our trip to Taniti Island was a breeze with all the resources available online. We were
-                well-prepared
-                and had an amazing time exploring the island."</p>
-            <p>"The travel guide was so helpful! It provided us with valuable information on everything from entry
-                requirements
-                to local customs. We highly recommend checking it out!"</p>
+            <p>"Taniti Island is a paradise! The scenery was stunning, and the activities were amazing. We had the best
+                time exploring the island and relaxing on the beach."</p>
+            <p>"We had an unforgettable experience in Taniti. The locals were friendly, the food was delicious, and the
+                island is truly breathtaking."</p>
+            <p>"The crystal-clear waters and vibrant coral reefs were a dream come true for snorkeling enthusiasts. We
+                saw an incredible variety of fish and marine life. This was definitely a highlight of our trip!"</p>
+            <p>"Taniti Island offered something for everyone in our family. The kids loved the water activities, while
+                we adults enjoyed exploring the historical sites and cultural experiences. We all had a wonderful time
+                and will cherish these memories forever."</p>
         </div>
     </section>
 
-    <section class="social-proof">
-        <img src="resources/travel-magazine-award-7893456_640.webp" alt="Travel Magazine Award Logo">
-        <p>Featured in "Top 10 Island Destinations"</p>
+    <section class="cta">
+        <a href="#" class="button">Explore Things to Do</a>
+        <a href="#" class="button">Browse Accommodations</a>
     </section>
 
-</body>
+    <section class="social-proof">
+        <img src="resources/laurel-wreath-2604071_640.webp" alt="Travel Award Logo">
+        <p>Featured in "Travel Times Today"</p>
+        <ul class="social-media">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+    </section>
 
-</html>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Taniti Island. All Rights Reserved.</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </footer>
+</body>
