more style/image changes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
         <p>Unwind, explore, and discover on a tropical island getaway.</p>
     </section>
 
+    <section class="taniti-intro">
+        <h2>Your Island Escape</h2>
+        <p>Escape to Taniti, a breathtaking island paradise offering diverse landscapes, from sandy beaches to
+            rainforests. Explore the active volcano, indulge in delicious cuisine, and discover adventure activities
+            like snorkeling and zip-lining. Relax in charming accommodations and explore vibrant Taniti City with its
+            native architecture.</p>
+        <h3>Highlights:</h3>
+        <ul>
+            <li>Beaches, rainforest, volcano</li>
+            <li>Diverse restaurants and lodging</li>
+            <li>Snorkeling, zip-lining, nightlife</li>
+            <li>Family-friendly activities</li>
+            <li>Safe and accessible</li>
+        </ul>
+        <p><a href="#">Learn more and plan your dream vacation!</a></p>
+    </section>
+
     <section class="highlights">
         <h2>Explore Taniti</h2>
         <div class="container">
