--- a/things_to_do.html
+++ b/things_to_do.html
@@ -41,25 +41,25 @@
         <h2>Things To Do on Taniti Island</h2>
         <div class="container">
             <article>
-                <img src="resources/hike-volcano-5969647_640.jpg" alt="Hike the Volcano">
+                <img src="resources/hike-863454_1280.jpg" alt="Hike the Volcano">
                 <h3>Hike the Volcano</h3>
                 <p>Challenge yourself with a breathtaking hike to the summit of Taniti's volcano and witness stunning
                     views.</p>
             </article>
             <article>
-                <img src="resources/snorkel-coral-reefs-5222196_640.jpg" alt="Snorkel the Coral Reefs">
+                <img src="resources/snorkeling-5222196_640.jpg" alt="Snorkel the Coral Reefs">
                 <h3>Snorkel the Coral Reefs</h3>
                 <p>Explore a vibrant underwater world teeming with colorful fish and explore the wonders of the coral
                     reefs.</p>
             </article>
             <article>
-                <img src="resources/relax-beach-2218989_640.jpg" alt="Relax on Pristine Beaches">
+                <img src="resources/beach-6758406_640.jpg" alt="Relax on Pristine Beaches">
                 <h3>Relax on Pristine Beaches</h3>
                 <p>Unwind and soak up the sun on our secluded beaches, perfect for relaxation and enjoying the ocean
                     breeze.</p>
             </article>
             <article>
-                <img src="resources/kayaking-5673300_640.jpg" alt="Go Kayaking">
+                <img src="resources/kayak.jpg" alt="Go Kayaking">
                 <h3>Go Kayaking</h3>
                 <p>Explore the beautiful coastline and hidden coves of Taniti Island with a kayaking adventure.</p>
             </article>
@@ -88,10 +88,7 @@
         </div>
     </section>
 
-    <section class="cta">
-        <a href="#" class="button">Explore Things to Do</a>
-        <a href="#" class="button">Browse Accommodations</a>
-    </section>
+
 
     <section class="social-proof">
         <img src="resources/laurel-wreath-2604071_640.webp" alt="Travel Award Logo">
