more style updates

--- a/eat_drink.html
+++ b/eat_drink.html
@@ -42,24 +42,24 @@
         <h2>Where to Eat & Drink on Taniti Island</h2>
         <div class="container">
             <article>
-                <img src="resources/fine-dining-restaurant-2345678_640.jpg" alt="Fine Dining Restaurants">
+                <img src="resources/finedining.jpg" alt="Fine Dining Restaurants">
                 <h3>Fine Dining Restaurants</h3>
                 <p>Experience exquisite cuisine prepared with fresh, local ingredients at our world-class restaurants.
                 </p>
             </article>
             <article>
-                <img src="resources/beachfront-bar-8765432_640.jpg" alt="Beachfront Bars">
+                <img src="resources/beachbarwide.jpg" alt="Beachfront Bars">
                 <h3>Beachfront Bars</h3>
                 <p>Sip on refreshing cocktails and enjoy breathtaking ocean views at our vibrant beachfront bars.</p>
             </article>
             <article>
-                <img src="resources/local-market-9876543_640.jpg" alt="Local Markets">
+                <img src="resources/market.jpg" alt="Local Markets">
                 <h3>Local Markets</h3>
                 <p>Immerse yourself in the local culture and savor authentic flavors at Taniti Island's bustling
                     markets.</p>
             </article>
             <article>
-                <img src="resources/poolside-bar-1234567_640.jpg" alt="Poolside Bars">
+                <img src="resources/poolbar.jpg" alt="Poolside Bars">
                 <h3>Poolside Bars</h3>
                 <p>Relax and unwind by the pool with refreshing drinks and light bites at our convenient poolside bars.
                 </p>
@@ -82,8 +82,8 @@
     </section>
 
     <section class="cta">
-        <a href="#" class="button">Explore Things to Do</a>
-        <a href="#" class="button">Browse Accommodations</a>
+        <a href="things_to_do.html" class="button">Explore Things to Do</a>
+        <a href="places_to_stay.html" class="button">Browse Accommodations</a>
     </section>
 
     <section class="social-proof">
