--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     </section>
 
     <section class="cta">
-        <a href="#" class="button">Explore Things to Do</a>
-        <a href="#" class="button">Browse Accommodations</a>
+        <a href="things_to_do.html" class="button">Explore Things to Do</a>
+        <a href="places_to_stay.html" class="button">Browse Accommodations</a>
     </section>
 
     <section class="social-proof">
