--- a/places_to_stay.html
+++ b/places_to_stay.html
@@ -41,25 +41,25 @@
         <h2>Places to Stay on Taniti Island</h2>
         <div class="container">
             <article>
-                <img src="resources/beach-bungalow-5873701_640.jpg" alt="Luxury Beach Bungalows">
+                <img src="resources/luxarybungalow.jpg" alt="Luxury Beach Bungalows">
                 <h3>Luxury Beach Bungalows</h3>
                 <p>Indulge in beachfront bliss at our luxurious bungalows with stunning ocean views and private
                     terraces.</p>
             </article>
             <article>
-                <img src="resources/water-bungalow-2345178_640.jpg" alt="Overwater Bungalows">
+                <img src="resources/overwaterbungalow-666122_1280.jpg" alt="Overwater Bungalows">
                 <h3>Overwater Bungalows</h3>
                 <p>Experience unparalleled luxury on our overwater bungalows, featuring private decks and direct ocean
                     access.</p>
             </article>
             <article>
-                <img src="resources/ocean-view-hotel-5689321_640.jpg" alt="Ocean View Rooms">
+                <img src="resources/oceanviewbangalow.jpg" alt="Ocean View Rooms">
                 <h3>Ocean View Rooms</h3>
                 <p>Relax in our comfortable ocean view rooms featuring balconies or patios and breathtaking island
                     vistas.</p>
             </article>
             <article>
-                <img src="resources/rainforest-bungalow-7893456_640.jpg" alt="Rainforest Bungalows">
+                <img src="resources/jungle bungalow.jpg" alt="Rainforest Bungalows">
                 <h3>Rainforest Bungalows</h3>
                 <p>Immerse yourself in nature with our charming rainforest bungalows, offering a secluded and peaceful
                     retreat.</p>
@@ -70,8 +70,8 @@
     <section class="call-to-action">
         <h2>Book Your Dream Escape Today!</h2>
         <p>Find your perfect place to stay on Taniti Island and start creating lifelong memories.</p>
-        <a href="#" class="button">Browse Accommodations</a>
-        <a href="#" class="button">Explore Things to Do</a>
+        <a href="things_to_do.html" class="button">Explore Things to Do</a>
+        <a href="places_to_stay.html" class="button">Browse Accommodations</a>
     </section>
 
     <section class="testimonials">
