--- a/plan_your_trip.html
+++ b/plan_your_trip.html
@@ -40,7 +40,7 @@
 
     <section class="content">
         <h2>Essential Trip Planning Information</h2>
-        <div class="container">
+        <div class="planningtrip">
             <article>
                 <h3>Getting Here</h3>
                 <p>Find information on flights, ferry connections, and other transportation options to reach Taniti
@@ -66,7 +66,7 @@
         <h2>Start Planning Your Taniti Island Adventure Today!</h2>
         <p>Use our resources and helpful tips to craft the perfect itinerary for your dream vacation.</p>
         <a href="#" class="button">Download Travel Guide</a>
-        <a href="#" class="button">Browse Accommodations</a>
+        <a href="places_to_stay.html" class="button">Browse Accommodations</a>
     </section>
 
     <section class="testimonials">
