--- a/things_to_do.html
+++ b/things_to_do.html
@@ -69,8 +69,8 @@
     <section class="call-to-action">
         <h2>Plan Your Taniti Island Adventure Today!</h2>
         <p>Book your stay, discover exciting activities, and create unforgettable memories on Taniti Island.</p>
-        <a href="#" class="button">Explore Things to Do</a>
-        <a href="#" class="button">Browse Accommodations</a>
+        <a href="things_to_do.html" class="button">Explore Things to Do</a>
+        <a href="places_to_stay.html" class="button">Browse Accommodations</a>
     </section>
 
     <section class="testimonials">
